# Pipeline_Example

./: pyproject.toml  readme.md
airflow/dags/: npi.py
airflow/transforms/: npi.py
dbt/: pyproject.toml
dbt/pipeline/: dbt_project.yml
dbt/pipeline/models/: npi_flattened.sql  npi_flattened.yml  source.yml
